st: landing page section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container" id="main">
+        <div class="container-main">
+            
+        </div>
+    </div>
     
-
 
 
     <script src="scripts.js"></script>
