--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <div class="container" id="main">
         <div class="container-main">
-            
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#About">About</a>
+                <a href="#Designs">Designs</a>
+                <a href="Contact">Contact</a>
+                <a href="Work">Work</a>
+            </nav>
         </div>
     </div>
     
