--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
                 <a href="#home">Home</a>
                 <a href="#About">About</a>
                 <a href="#Designs">Designs</a>
-                <a href="Contact">Contact</a>
-                <a href="Work">Work</a>
+                <a href="#Contact">Contact</a>
+                <a href="#Work">Work</a>
             </nav>
+            <div class="content">
+                <div class="home" id="home">
+                    
+                </div>
+            </div>
         </div>
+
     </div>
     
 
