--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
             </nav>
             <div class="content">
                 <div class="home" id="home">
-                    
+                    <div class="profile">
+                        <div class="row">
+                            <div class="column-half">
+                                
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
