st: profile - profile section and styling

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
             </nav>
             <div class="content">
                 <div class="home" id="home">
-                    <div class="profile">
-                        <div class="row">
-                            <div class="column-half">
-                                
+                    <div class="row">
+                        <div class="column-half">
+                            <div class="mytext">
+                                <h1>I am A</h1>
+                                <h2>Software Dev</h2>
+                                <br><br>
+                                <p>Emkay Internation is well known brand going <br> by the name emkayint. <span></span></p>
+
+                                <label for="">Readmore</label>
+                                <span class="under"></span>
                             </div>
                         </div>
                     </div>
