st: author name and styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container-main">
             <nav>
                 <a href="#home">Home</a>
-                <a href="#About">About</a>
+                <a href="#project">Project</a>
                 <a href="#Designs">Designs</a>
                 <a href="#Contact">Contact</a>
                 <a href="#Work">Work</a>
@@ -29,6 +29,13 @@
 
                                 <label for="">Readmore</label>
                                 <span class="under"></span>
+                            </div>
+                        </div>
+
+                        <div class="column-half">
+                            <div class="profile-picture">
+                                <img src="assets/oie_o8A0WCIZOyFm-removebg-preview 1.png" alt="">
+                                <h1>Martin Kariuki</h1>
                             </div>
                         </div>
                     </div>
