fx: project - project & cards  section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="content">
                 <div class="home" id="home">
                     <div class="row">
-                        <div class="column-half">
+                        <div class="column-half one">
                             <div class="mytext">
                                 <h1>I am A</h1>
                                 <h2>Software Dev</h2>
@@ -36,6 +36,20 @@
                             <div class="profile-picture">
                                 <img src="assets/oie_o8A0WCIZOyFm-removebg-preview 1.png" alt="">
                                 <h1>Martin Kariuki</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="projects" id="projects">
+                    <div class="row">
+                        <div class="column-quater">
+                            <div class="card">
+                                <img src="" alt="">
+                                <div class="project-info">
+                                    
+                                </div>
                             </div>
                         </div>
                     </div>
