st: project- project details and link design

--- a/index.html
+++ b/index.html
@@ -42,14 +42,19 @@
                 </div>
 
 
-                <div class="projects" id="projects">
+                <div class="projects" id="project">
                     <div class="row">
-                        <div class="column-quater">
+                        <div class="column-half">
                             <div class="card">
-                                <img src="" alt="">
-                                <div class="project-info">
-                                    
-                                </div>
+                                <img src="assets/insuarance-website.png" alt="">
+                            </div>
+                        </div>
+                        
+                        <div class="column-half">
+                            <div class="spans">
+                                <span class="spans1"></span>
+                                <p>This is a landing page for an insurance Website</p>
+                                <a href="https://github.com/emkayint/insuarance-website">View Project</a>
                             </div>
                         </div>
                     </div>
