fix: css stling on page design

--- a/index.html
+++ b/index.html
@@ -58,6 +58,86 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="column-half">
+                            <div class="spans">
+                                <span class="spans1"></span>
+                                <p>Simple glassmorphism design  </p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      </p>
+                                <a href="https://github.com/emkayint/glassmorphism-design">View Project</a>
+                            </div>
+                        </div>
+
+                        <div class="column-half">
+                            <div class="card">
+                                <img src="assets/glassmorphism.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="column-half">
+                            <div class="card">
+                                <img src="assets/quiz-board.png" alt="">
+                            </div>
+                        </div>
+                        
+                        <div class="column-half">
+                            <div class="spans">
+                                <span class="spans1"></span>
+                                <p>Javascript quiz board</p>
+                                <a href="https://github.com/emkayint/insuarance-website">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="column-half">
+                            <div class="spans">
+                                <span class="spans1"></span>
+                                <p>data visualisation with Javascript</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      </p>
+                                <a href="https://github.com/emkayint/glassmorphism-design">View Project</a>
+                            </div>
+                        </div>
+
+                        <div class="column-half">
+                            <div class="card">
+                                <img src="assets/data.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="column-half">
+                            <div class="card">
+                                <img src="assets/resort.png" alt="">
+                            </div>
+                        </div>
+                        
+                        <div class="column-half">
+                            <div class="spans">
+                                <span class="spans1"></span>
+                                <p>Resort website design</p>
+                                <a href="https://github.com/emkayint/insuarance-website">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="column-half">
+                            <div class="spans">
+                                <span class="spans1"></span>
+                                <p>Ipad mockup css html project UI design</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      </p>
+                                <a href="https://github.com/emkayint/glassmorphism-design">View Project</a>
+                            </div>
+                        </div>
+
+                        <div class="column-half">
+                            <div class="card">
+                                <img src="assets/mockup.png" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
