st: navbar - profile picture section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container" id="main">
@@ -19,6 +21,11 @@
                 <a href="#Designs">Designs</a>
                 <a href="#Contact">Contact</a>
                 <a href="#Work">Work</a>
+
+                <div class="small-profile">
+                    <img src="assets/oie_o8A0WCIZOyFm-removebg-preview 1.png" alt="">
+                    <p>Profile</p>
+                </div>
             </nav>
             <div class="content">
                 <div class="home" id="home">
