st: about - about me section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="about" id="about">
+                    <div class="row">
+                        <div class="column-3">
+                            <div class="about-card">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
