st: programming section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,37 @@
                             </div>
                         </div>
 
-                       
+                        <div class="column-third">
+                            <div class="about-content">
+                                <div class="about-card">
+                                    <h3>Why Coding?</h3>
+                                    <p>It is a step towards game development <br> which I am looking forward to venture</p>
+                                    <hr>
+                                    <br>
+                                    <h3>Job expirience</h3>
+                                    <p>I have worked on various industries from music, social media, tutoring among others</p>
+                                    <hr>
+                                    <br>
+                                    <h2>Languages Familiar</h2>
+                                    <br>
+                                    <p>HTML5 / CSS</p>
+                                    <div class="html5">
+                                        <span>99%</span>
+                                    </div>
+                                    <br>
+                                    <p>Javascript</p>
+                                    <div class="js">
+                                        <span>89%</span>
+                                    </div>
+                                    <br>
+                                    <p>Python</p>
+                                    <div class="python">
+                                        <span>95%</span>
+                                    </div>
+                                    <br>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
