--- a/index.html
+++ b/index.html
@@ -204,6 +204,24 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="column-third">
+                            <div class="about-content">
+                                <div class="about-card int">
+                                    <h2>Interests / Hobbies</h2>
+                                    <br><br>
+                                    <p>Writting</p><br>
+                                    <p>Drawing</p><br>
+                                    <p>3d design</p><br>
+                                    <p>UI design</p><br>
+                                    <p>Reading</p><br>
+                                    <p>Reaserch & Development</p><br>
+                                    <p>Swimming</p><br>
+                                    <p>Traveling</p><br>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
