--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="#home">Home</a>
                 <a href="#project">Project</a>
-                <a href="#Designs">Designs</a>
+                <a href="#about">About</a>
                 <a href="#Contact">Contact</a>
                 <a href="#Work">Work</a>
 
@@ -151,6 +151,9 @@
                 </div>
 
                 <div class="about" id="about">
+                    <header>
+                        <h1>About Me</h1>
+                    </header>
                     <div class="row">
                         <div class="column-third">
                             <div class="about-content">
@@ -222,6 +225,14 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="contact" id="contact">
+                    <div class="form-card">
+                        <form action="">
+                            
+                        </form>
                     </div>
                 </div>
             </div>
