--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#home">Home</a>
                 <a href="#project">Project</a>
                 <a href="#about">About</a>
-                <a href="#Contact">Contact</a>
+                <a href="#contact">Contact</a>
                 <a href="#Work">Work</a>
 
                 <div class="small-profile">
@@ -230,8 +230,15 @@
 
                 <div class="contact" id="contact">
                     <div class="form-card">
+                        <h1>Contact</h1>
+                        <p>We offer tailor-made software develepment services for both large and small enterprises. We also offer followup services upto 6 months of purchase and customer support. Do not hesitate to contact us.</p>
+                        <p>You can contact us by phone <i class="text-green">+(254)-742-075-647</i> or email us at<i class="w3-text-green"><a href="business.kariukimartin@gmail.com" style="text-decoration: none;"> business.kariukimartin@gmail.com</a></i> </p>
+                        
                         <form action="">
-                            
+                           <p><input type="text" name="name" placeholder="Name" required></p>
+                           <p><input type="email" name="email" placeholder="email@example.com" required></p>
+                           <p><input type="text"  name="message" placeholder="Message \ Ask Us" required></p>
+                            <p><button type="submit">Send</button></p>
                         </form>
                     </div>
                 </div>
