st: icons - fontawsome icons & styling

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@200&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <div class="container" id="main">
         <div class="container-main">
             <nav>
-                <a href="#home">Home</a>
-                <a href="#project">Project</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-                <a href="#Work">Work</a>
+                <a href="#home"><i class="fa fa-home fa-fw icon"></i> Home</a>
+                <a href="#project"><i class="fa fa-th fa-fw icon"></i> Project</a>
+                <a href="#about"><i class="fa fa-users fa-fw icon"></i> About</a>
+                <a href="#contact"><i class="fa fa-envelope-open-text fa-fw icon"></i> Contact</a>
+                <a href="#Work"><i class="fa fa-globe fa-fw icon"></i> Work</a>
 
                 <div class="small-profile">
                     <img src="assets/oie_o8A0WCIZOyFm-removebg-preview 1.png" alt="">
@@ -66,7 +67,7 @@
                             <div class="spans">
                                 <span class="spans1"></span>
                                 <p>This is a landing page for an insurance Website</p>
-
+                                <p><i class="fab fa-css3-alt fa-fw css3"></i><i class="fab fa-html5 fa-fw html5"></i></p>
                                 <a href="https://github.com/emkayint/insuarance-website">View Project</a>
                             </div>
                         </div>
@@ -76,7 +77,8 @@
                         <div class="column-half">
                             <div class="spans">
                                 <span class="spans1"></span>
-                                <p>Simple glassmorphism design  </p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      </p>
+                                <p>Simple glassmorphism design  </p>
+                                <p><i class="fab fa-css3-alt fa-fw css3"></i><i class="fab fa-html5 fa-fw html5"></i></p>
                                 <a href="https://github.com/emkayint/glassmorphism-design">View Project</a>
                             </div>
                         </div>
@@ -99,6 +101,7 @@
                             <div class="spans">
                                 <span class="spans1"></span>
                                 <p>Javascript quiz board</p>
+                                <p><i class="fab fa-js fa-fw js"></i><i class="fab fa-css3-alt fa-fw css3"></i><i class="fab fa-html5 fa-fw html5"></i></p>
                                 <a href="https://github.com/emkayint/insuarance-website">View Project</a>
                             </div>
                         </div>
@@ -108,7 +111,8 @@
                         <div class="column-half">
                             <div class="spans">
                                 <span class="spans1"></span>
-                                <p>data visualisation with Javascript</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      </p>
+                                <p>data visualisation with Javascript</p> 
+                                <p><i class="fab fa-js fa-fw js"></i><i class="fab fa-css3-alt fa-fw css3"></i><i class="fab fa-html5 fa-fw html5"></i></p>
                                 <a href="https://github.com/emkayint/glassmorphism-design">View Project</a>
                             </div>
                         </div>
@@ -131,6 +135,7 @@
                             <div class="spans">
                                 <span class="spans1"></span>
                                 <p>Resort website design</p>
+                                <p><i class="fab fa-css3-alt fa-fw css3"></i><i class="fab fa-html5 fa-fw html5"></i></p>
                                 <a href="https://github.com/emkayint/insuarance-website">View Project</a>
                             </div>
                         </div>
@@ -140,7 +145,8 @@
                         <div class="column-half">
                             <div class="spans">
                                 <span class="spans1"></span>
-                                <p>Ipad mockup css html project UI design</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      </p>
+                                <p>Ipad mockup css html project UI design</p>    
+                                <p><i class="fab fa-css3-alt fa-fw css3"></i><i class="fab fa-html5 fa-fw html5"></i></p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </p>
                                 <a href="https://github.com/emkayint/glassmorphism-design">View Project</a>
                             </div>
                         </div>
@@ -158,20 +164,21 @@
                         <h1>About Me</h1>
                     </header>
                     <div class="row">
+
                         <div class="column-third">
                             <div class="about-content">
                                 <div class="about-card">
-                                    <h1>Education</h1>
-                                    <br><br><br>
+                                    <h1><i class="fa fa-briefcase fa-fw bri"></i> Education</h1>
+                                    <br><br>
                                     <h2>Sep 2018 - Dec 2019</h2><br>
                                     <p>Bachelor in Civil Engineering</p>
                                     <p>Changsha University</p>
-                                    <hr>
+                                    <hr><br>
     
                                     <h2> March - Dec 2020 </h2> <br>
                                     <p>Python Programing</p>
                                     <p>Online Tutorials: skllshare, w3-schools, Tutorialspoint</p>
-                                    <hr>
+                                    <hr><br>
                                     <h2>Jan - December 2021</h2> <br>
                                     <p>Coding & 3D design</p>
                                     <p>Online Tutorials: Youtube, Skillshare</p>
@@ -193,20 +200,22 @@
                                     <h2>Languages Familiar</h2>
                                     <br>
                                     <p>HTML5 / CSS</p>
+                                    <br>
                                     <div class="html5">
                                         <span>99%</span>
                                     </div>
                                     <br>
                                     <p>Javascript</p>
+                                    <br>
                                     <div class="js">
                                         <span>89%</span>
                                     </div>
                                     <br>
                                     <p>Python</p>
+                                    <br>
                                     <div class="python">
                                         <span>95%</span>
                                     </div>
-                                    <br>
                                 </div>
                             </div>
                         </div>
@@ -216,14 +225,14 @@
                                 <div class="about-card int">
                                     <h2>Interests / Hobbies</h2>
                                     <br><br>
-                                    <p>Writting</p><br>
-                                    <p>Drawing</p><br>
-                                    <p>3d design</p><br>
-                                    <p>UI design</p><br>
-                                    <p>Reading</p><br>
-                                    <p>Reaserch & Development</p><br>
-                                    <p>Swimming</p><br>
-                                    <p>Traveling</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> Writting</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> Drawing</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> 3d design</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> UI design</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> Reading</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> Reaserch & Development</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> Swimming</p><br>
+                                    <p><i class="fa fa-gem fa-fw bri"></i> Traveling</p><br>
 
                                 </div>
                             </div>
