--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         <p>We offer tailor-made software develepment services for both large and small enterprises. We also offer followup services upto 6 months of purchase and customer support. Do not hesitate to contact us.</p>
                         <p>You can contact us by phone <i class="text-green">+(254)-742-075-647</i> or email us at<i class="w3-text-green"><a href="business.kariukimartin@gmail.com" style="text-decoration: none;"> business.kariukimartin@gmail.com</a></i> </p>
                         
-                        <form action="">
+                        <form action="https://script.google.com/macros/s/AKfycbx_Rg_DxROS915uSN2CK6OkMrw9FmEAPw0NF5blLrkRn9VYURWeYbvt4KFNkdjeEJ4v/exec">
                            <p><input type="text" name="name" placeholder="Name" required></p>
                            <p><input type="email" name="email" placeholder="email@example.com" required></p>
                            <p><input type="text"  name="message" placeholder="Message \ Ask Us" required></p>
