st: css styling beautifying

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 
 
                 <div class="projects" id="project">
+                    <div class="header">
+                        <span class="dot-1"></span> <span class="dot-2"></span> <span class="dot-3"></span>
+                    </div>
                     <div class="row">
                         <div class="column-half">
                             <div class="card">
