st: css - css animation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <h1>I am A</h1>
                                 <h2>Software Dev</h2>
                                 <br><br>
-                                <p>Emkay Internation is well known brand going <br> by the name emkayint. <span></span></p>
+                                <p>Emkay International (emkayint) is well known brand going <br> by the name emkayint. <span></span></p>
 
                                 <label for="">Readmore</label>
                                 <span class="under"></span>
