st: css - nav bar animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <div class="container" id="main">
         <div class="container-main">
             <nav>
+                <div class="header1">
+                    <span class="dot-1"></span> <span class="dot-2"></span> <span class="dot-3"></span>
+                </div>
                 <a href="#home"><i class="fa fa-home fa-fw icon"></i> Home</a>
                 <a href="#project"><i class="fa fa-th fa-fw icon"></i> Project</a>
                 <a href="#about"><i class="fa fa-users fa-fw icon"></i> About</a>
